# Cv-chest-x-ray

./: .gitignore  IMPROVEMENTS.md  README.md  Untitled27.ipynb  install_gpu.ps1  main.py  pyproject.toml
src/: __init__.py  config.py  data.py  evaluate.py  gpu.py  model.py  pipeline.py  train.py
