[project]
name = "chest-xray-classifier"
version = "0.2.0"
description = "Chest X-ray classification with a TorchXRayVision DenseNet121 backbone"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "torchxrayvision",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "Pillow",
]

# This is an application, not an importable library, so don't try to build/install it.
[tool.uv]
package = false
